# crud-rest-api-cpp-crow-libpqxx-postgres

./: .clang-format  .clang-tidy  .env  .gitignore  .gitmodules  CMakeLists.txt  docker-compose.yaml  readme.md
cmake/: CompilerWarnings.cmake  ProjectSettings.cmake
dependencies/: CMakeLists.txt
docker/: Dockerfile  install-deps-build.sh  install-deps-run.sh  install-deps.sh
migrations/0001_create_artists/: up.sql
scripts/: cmake-format.sh
src/: CMakeLists.txt  main.cpp  models.cpp  models.hpp  repo.cpp  repo.hpp  types.cpp  types.hpp  wheels.cpp  wheels.hpp
